--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
               <p>Sản phẩm luận văn tốt nghiệp của Võ Thị Phương Trinh</p>
               <!-- Copywrite Text-->
               <div class="copywrite-text mb-5">
-                <p class="mb-0">Được xây dựng bởi<i class="lni-heart mr-1"></i>by<a class="ml-1" href="https://angular.io/">Angular</a></p>
+                <p class="mb-0">Được xây dựng<i class="lni-heart mr-1"></i>bởi<a class="ml-1" href="https://angular.io/">Angular</a></p>
               </div>
               <!-- Footer Social Area-->
               <div class="footer_social_area"><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Pinterest"><i class="fa fa-pinterest"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Skype"><i class="fa fa-skype"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div>
@@ -55,7 +55,6 @@
               <!-- Footer Menu-->
               <div class="footer_menu">
                 <ul>
-                  <li><a href="#">Call Centre</a></li>
                   <li><a href="#">Email</a></li>
                   <li><a href="#">Điều khoản &amp; Chính sách</a></li>
                   <li><a href="#">Trung tâm hỗ trợ</a></li>
