--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -66,7 +66,12 @@
                             <label for="file">Chọn file dữ liệu</label>
                             <input type="file" class="form-control-file" id="file" />
                         </div>
-                        <button type="submit" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-secondary">Xem danh sách sinh viên</button>
+                        </div>
                     </div>
                 </div>
 
@@ -103,7 +108,12 @@
                             <label for="teacherFile">Chọn file dữ liệu</label>
                             <input type="file" class="form-control-file" id="teacherFile" />
                         </div>
-                        <button type="submit" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-secondary">Xem danh sách giáo viên</button>
+                        </div>
                     </div>
                 </div>
 
@@ -151,7 +161,12 @@
                             <label for="teacherFile">Chọn file danh sách lớp</label>
                             <input type="file" class="form-control-file" id="teacherFile" />
                         </div>
-                        <button type="submit" class="btn btn-primary">Tạo lớp học</button>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Tạo lớp học</button>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-secondary">Xem danh sách các lớp học</button>
+                        </div>
                     </div>
                 </div>
                 
