Add Practice/Class component, logging out done

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,8 +4,12 @@
         <span class="login100-form-title p-b-26">
             VIETNAM NATIONAL UNIVERSITY <br> PHYSICAL EDUCATION GRADER
         </span>
-        <button class="btn pink" type="submit">ĐĂNG NHẬP</button>
-        <button class="btn pink" type="submit">TẬP LUYỆN TỰ DO</button>
+        <a routerLink="/login" routerLinkActive="active">
+            <button class="btn pink" type="submit">ĐĂNG NHẬP</button>
+        </a>
+        <a routerLink="/practice" routerLinkActive="active">
+            <button class="btn pink" type="submit">TẬP LUYỆN TỰ DO</button>
+        </a>
     </div>
     
 </div>
