--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -12,7 +12,7 @@
     </a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Đăng xuất</a>
+          <a class="nav-link" (click)="logOut()" href="#">Đăng xuất</a>
         </li>
       </ul>
     </div>
