--- a/client/src/app/class/class.component.html
+++ b/client/src/app/class/class.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" href="javascript:void(0);">Trang cá nhân <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="logOut()" href="javascript:void(0);">Đăng xuất</a>
+          <a class="nav-link" (click)="logOut()" href="#">Đăng xuất</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
