--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -89,7 +89,7 @@
                         <div class="form-group">
                             <label for="username">Tên tài khoản</label>
                             <input type="text" class="form-control" id="id" 
-                            [(ngModel)]=teacherData.accountUsername #teacherUsername="ngModel" name="teacherUsername"/>
+                            [(ngModel)]=teacherData.username #teacherUsername="ngModel" name="teacherUsername"/>
                         </div>
                         <div class="form-group">
                             <label for="teacherFullName">Họ và tên</label>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="form-group">
                             <label for="teacherPhoneNumber">Số điện thoại</label>
-                            <input type="number" class="form-control" id="teacherPhoneNumber" 
+                            <input type="text" class="form-control" id="teacherPhoneNumber" 
                             [(ngModel)]=teacherData.phoneNumber #teacherPhoneNumber="ngModel" name="teacherPhoneNumber"/>
                         </div>
                         <div class="form-group">
