--- a/client/src/app/class/class.component.css
+++ b/client/src/app/class/class.component.css
@@ -64,3 +64,6 @@ body{margin-top:20px;
         background-color: #fff;
         border-bottom: 0 solid transparent;
     }
+    .btn{
+        margin: 5px;
+    }
