--- a/client/src/app/class/class.component.html
+++ b/client/src/app/class/class.component.html
@@ -26,142 +26,39 @@
   </nav>
 <div class="container">
     <div class="container-fluid p-0">
-		<h1 class="h3 mb-3">Clients</h1>
+		<h1 class="h3 mb-3">{{classInfo.subject}} - {{classInfo.id}} - {{classInfo.weekDay}} - {{classInfo.startTime}}</h1>
+		<div *ngIf="currentUser.accountType==roleTeacher" class="row">
+			<label for="subject">Tiêu đề bài đăng</label>
+            <input type="text" class="form-control" id="subject" 
+			[(ngModel)]=postData.postName #postName="ngModel" name="postname"/>
+			<label for="subject">Nội dung bài đăng</label>
+            <textarea type="text" class="form-control" id="subject" 
+			[(ngModel)]=postData.content #postContent="ngModel" name="postContent">
+			</textarea>
+			<button type="submit" (click)="createPost()" class="btn btn-primary">Đăng bài</button>
+		</div>
 		<div class="row">
-			<div class="col-xl-8">
+			<div class="col-xl-6">
 				<div class="card">
 					<div class="card-header pb-0">
-						<div class="card-actions float-right">
-							<div class="dropdown show">
-								<a href="#" data-toggle="dropdown" data-display="static">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-								</a>
-
-								<div class="dropdown-menu dropdown-menu-right">
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</div>
-							</div>
-						</div>
-						<h5 class="card-title mb-0">Clients</h5>
+						<h5 class="card-title mb-0">Danh sách lớp</h5>
 					</div>
 					<div class="card-body">
 						<table class="table table-striped" style="width:100%">
 							<thead>
 								<tr>
 									<th>#</th>
-									<th>Name</th>
-									<th>Company</th>
-									<th>Email</th>
-									<th>Status</th>
+									<th>Họ và tên</th>
+									<th>Mã sinh viên</th>
+									<th *ngIf="currentUser.accountType==roleTeacher">Điểm</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Garrett Winters</td>
-									<td>Good Guys</td>
-									<td>garrett@winters.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Ashton Cox</td>
-									<td>Levitz Furniture</td>
-									<td>ashton@cox.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Sonya Frost</td>
-									<td>Child World</td>
-									<td>sonya@frost.com</td>
-									<td><span class="badge bg-danger">Deleted</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Jena Gaines</td>
-									<td>Helping Hand</td>
-									<td>jena@gaines.com</td>
-									<td><span class="badge bg-warning">Inactive</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar2.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Charde Marshall</td>
-									<td>Price Savers</td>
-									<td>charde@marshall.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar2.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Haley Kennedy</td>
-									<td>Helping Hand</td>
-									<td>haley@kennedy.com</td>
-									<td><span class="badge bg-danger">Deleted</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar2.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Tatyana Fitzpatrick</td>
-									<td>Good Guys</td>
-									<td>tatyana@fitzpatrick.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar3.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Michael Silva</td>
-									<td>Red Robin Stores</td>
-									<td>michael@silva.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar3.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Angelica Ramos</td>
-									<td>The Wiz</td>
-									<td>angelica@ramos.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar4.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Jennifer Chang</td>
-									<td>Helping Hand</td>
-									<td>jennifer@chang.com</td>
-									<td><span class="badge bg-warning">Inactive</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar4.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Brenden Wagner</td>
-									<td>The Wiz</td>
-									<td>brenden@wagner.com</td>
-									<td><span class="badge bg-warning">Inactive</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar4.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Fiona Green</td>
-									<td>The Sample</td>
-									<td>fiona@green.com</td>
-									<td><span class="badge bg-warning">Inactive</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar5.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Prescott Bartlett</td>
-									<td>The Sample</td>
-									<td>prescott@bartlett.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar5.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Gavin Cortez</td>
-									<td>Red Robin Stores</td>
-									<td>gavin@cortez.com</td>
-									<td><span class="badge bg-success">Active</span></td>
-								</tr>
-								<tr>
-									<td><img src="https://bootdey.com/img/Content/avatar/avatar5.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
-									<td>Howard Hatfield</td>
-									<td>Price Savers</td>
-									<td>howard@hatfield.com</td>
-									<td><span class="badge bg-warning">Inactive</span></td>
+								<tr *ngFor="let student of students; let i = index">
+									<td>{{i + 1}}</td>
+									<td>{{student.fullName}}</td>
+									<td>{{student.id}}</td>
+									<td *ngIf="currentUser.accountType==roleTeacher">{{student.grade}}</td>
 								</tr>
 							</tbody>
 						</table>
@@ -169,88 +66,41 @@
 				</div>
 			</div>
 
-			<div class="col-xl-4">
+			<div class="col-xl-6">
 				<div class="card">
 					<div class="card-header">
-						<div class="card-actions float-right">
-							<div class="dropdown show">
-								<a href="#" data-toggle="dropdown" data-display="static">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-								</a>
-
-								<div class="dropdown-menu dropdown-menu-right">
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</div>
-							</div>
-						</div>
-						<h5 class="card-title mb-0">Angelica Ramos</h5>
+						<h5 class="card-title mb-0">Thông tin giáo viên</h5>
 					</div>
 					<div class="card-body">
-						<div class="row g-0">
-							<div class="col-sm-3 col-xl-12 col-xxl-3 text-center">
-								<img src="https://bootdey.com/img/Content/avatar/avatar3.png" width="64" height="64" class="rounded-circle mt-2" alt="Angelica Ramos">
-							</div>
-							<div class="col-sm-9 col-xl-12 col-xxl-9">
-								<strong>About me</strong>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-									magna aliqua.</p>
-							</div>
-						</div>
 
 						<table class="table table-sm mt-2 mb-4">
 							<tbody>
 								<tr>
-									<th>Name</th>
-									<td>Angelica Ramos</td>
+									<th>Tên</th>
+									<td>{{teacherInfo.fullName}}</td>
 								</tr>
 								<tr>
-									<th>Company</th>
-									<td>The Wiz</td>
+									<th>Số điện thoại</th>
+									<td>{{teacherInfo.phoneNumber}}</td>
 								</tr>
 								<tr>
 									<th>Email</th>
-									<td>angelica@ramos.com</td>
+									<td>{{teacherInfo.email}}</td>
 								</tr>
 								<tr>
-									<th>Phone</th>
-									<td>+1234123123123</td>
-								</tr>
-								<tr>
-									<th>Status</th>
-									<td><span class="badge bg-success">Active</span></td>
+									<th>Ngày sinh</th>
+									<td>{{formatDate(teacherInfo.dateOfBirth)}}</td>
 								</tr>
 							</tbody>
 						</table>
 
-						<strong>Activity</strong>
+						<strong>Bài đăng</strong>
 
 						<ul class="timeline mt-2 mb-0">
-							<li class="timeline-item">
-								<strong>Signed out</strong>
-								<span class="float-right text-muted text-sm">30m ago</span>
-								<p>Nam pretium turpis et arcu. Duis arcu tortor, suscipit...</p>
-							</li>
-							<li class="timeline-item">
-								<strong>Created invoice #1204</strong>
-								<span class="float-right text-muted text-sm">2h ago</span>
-								<p>Sed aliquam ultrices mauris. Integer ante arcu...</p>
-							</li>
-							<li class="timeline-item">
-								<strong>Discarded invoice #1147</strong>
-								<span class="float-right text-muted text-sm">3h ago</span>
-								<p>Nam pretium turpis et arcu. Duis arcu tortor, suscipit...</p>
-							</li>
-							<li class="timeline-item">
-								<strong>Signed in</strong>
-								<span class="float-right text-muted text-sm">3h ago</span>
-								<p>Curabitur ligula sapien, tincidunt non, euismod vitae...</p>
-							</li>
-							<li class="timeline-item">
-								<strong>Signed up</strong>
-								<span class="float-right text-muted text-sm">2d ago</span>
-								<p>Sed aliquam ultrices mauris. Integer ante arcu...</p>
+							<li *ngFor="let post of posts" class="timeline-item">
+								<strong>{{post.postName}}</strong>
+								<span class="float-right text-muted text-sm">{{formatDate(post.updatedAt)}}</span>
+								<p>{{post.content}}</p>
 							</li>
 						</ul>
 
