--- a/client/src/app/teacher/teacher.component.html
+++ b/client/src/app/teacher/teacher.component.html
@@ -26,7 +26,7 @@
   </nav>
 <div class="container">
     <div class="container-fluid p-0">
-		<h1 class="h3 mb-3">Xin chào {{teacherInfo.fullName}}</h1>
+		<h1 *ngIf="teacherInfo" class="h3 mb-3">Xin chào {{teacherInfo.fullName}}</h1>
 		<div class="row">
 			<div class="col-xl-8">
 				<div class="card">
@@ -34,7 +34,7 @@
 						<h5 class="card-title mb-0">Danh sách lớp của bạn</h5>
 					</div>
 					<div class="card-body">
-						<table class="table table-striped" style="width:100%">
+						<table *ngIf="classesLoaded" class="table table-striped" style="width:100%">
 							<thead>
 								<tr>
 									<th>Môn học</th>
@@ -63,7 +63,7 @@
 					</div>
 					<div class="card-body">
 
-						<ul class="timeline mt-2 mb-0">
+						<ul *ngIf="postsLoaded" class="timeline mt-2 mb-0">
 							<li *ngFor = "let post of posts" class="timeline-item">
 								<strong>{{post.postName}}</strong>
 								<span class="float-right text-muted text-sm">{{formatDate(post.updatedAt)}}</span>
