--- a/client/src/app/practice/practice.component.html
+++ b/client/src/app/practice/practice.component.html
@@ -34,14 +34,14 @@
 
     </div>
     <div [hidden]="!modelLoaded" class="col mb-3">
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
+      <h1>Goc 1</h1>
+      <h1>Goc 2</h1>
+      <h1>Goc 3</h1>
+      <h1>Goc 4</h1>
+      <h1>Goc 5</h1>
+      <h1>Goc 6</h1>
+      <h1>Goc 7</h1>
+      <h1>Goc 8</h1>
     </div>
   </div>
 </div>
