--- a/client/src/app/test/test.component.html
+++ b/client/src/app/test/test.component.html
@@ -34,14 +34,7 @@
 
     </div>
     <div [hidden]="!modelLoaded" class="col mb-3">
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
-      <h1>Goc asldkfjlaskdjf </h1>
+      <h1>Buoc 1</h1>
     </div>
   </div>
 </div>
