--- a/client/src/app/student-list/student-list.component.html
+++ b/client/src/app/student-list/student-list.component.html
@@ -1,4 +1,23 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+        <img
+        src="./../../assets/logo.svg"
+        class="me-2"
+        height="20"
+        alt=""
+        loading="lazy"
+        />
+        <h3>Trang quản trị của Admin</h3>
+    </a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" (click)="logOut()" href="#">Đăng xuất</a>
+        </li>
+      </ul>
+    </div>
+</nav>
 <div class="container">
 <div class="row">
 	<div class="col-lg-12">
@@ -7,367 +26,42 @@
 				<table class="table user-list">
 					<thead>
 						<tr>
-							<th><span>User</span></th>
-							<th><span>Created</span></th>
-							<th class="text-center"><span>Status</span></th>
-							<th><span>Email</span></th>
+							<th><span>Tên & Mã sinh viên</span></th>
+							<th><span>Ngày sinh</span></th>
+							<th class="text-center"><span>Số điện thoại</span></th>
+							<th><span>Lớp đang học</span></th>
 							<th>&nbsp;</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<tr *ngFor="let student of students">
 							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Mila Kunis</a>
-								<span class="user-subhead">Admin</span>
+								<a href="javascript:void(0)" class="user-link">{{student.fullName}}</a>
+								<span class="user-subhead">{{student.id}}</span>
 							</td>
 							<td>
-								2013/08/08
+								{{formatDate(student.dateOfBirth)}}
 							</td>
 							<td class="text-center">
-								<span class="label label-default">Inactive</span>
+								<span class="label label-default">{{student.phoneNumber}}</span>
 							</td>
 							<td>
-								<a href="#">mila@kunis.com</a>
+								<a href="javascript:void(0)">{{student.classId}}</a>
 							</td>
 							<td style="width: 20%;">
-								<a href="#" class="table-link">
+								<a href="javascript:void(0)" class="table-link">
 									<span class="fa-stack">
 										<i class="fa fa-square fa-stack-2x"></i>
 										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
 									</span>
 								</a>
-								<a href="#" class="table-link">
+								<a href="javascript:void(0)" class="table-link">
 									<span class="fa-stack">
 										<i class="fa fa-square fa-stack-2x"></i>
 										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
 									</span>
 								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
-								<a href="#" class="user-link">George Clooney</a>
-								<span class="user-subhead">Member</span>
-							</td>
-							<td>
-								2013/08/12
-							</td>
-							<td class="text-center">
-								<span class="label label-success">Active</span>
-							</td>
-							<td>
-								<a href="#">marlon@brando.com</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
-								<a href="#" class="user-link">Ryan Gossling</a>
-								<span class="user-subhead">Registered</span>
-							</td>
-							<td>
-								2013/03/03
-							</td>
-							<td class="text-center">
-								<span class="label label-danger">Banned</span>
-							</td>
-							<td>
-								<a href="#">jack@nicholson</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="">
-								<a href="#" class="user-link">Emma Watson</a>
-								<span class="user-subhead">Registered</span>
-							</td>
-							<td>
-								2004/01/24
-							</td>
-							<td class="text-center">
-								<span class="label label-warning">Pending</span>
-							</td>
-							<td>
-								<a href="#">humphrey@bogart.com</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar5.png" alt="">
-								<a href="#" class="user-link">Robert Downey Jr.</a>
-								<span class="user-subhead">Admin</span>
-							</td>
-							<td>
-								2013/12/31
-							</td>
-							<td class="text-center">
-								<span class="label label-success">Active</span>
-							</td>
-							<td>
-								<a href="#">spencer@tracy</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
-								<a href="#" class="user-link">Mila Kunis</a>
-								<span class="user-subhead">Admin</span>
-							</td>
-							<td>
-								2013/08/08
-							</td>
-							<td class="text-center">
-								<span class="label label-default">Inactive</span>
-							</td>
-							<td>
-								<a href="#">mila@kunis.com</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
-								<a href="#" class="user-link">George Clooney</a>
-								<span class="user-subhead">Member</span>
-							</td>
-							<td>
-								2013/08/12
-							</td>
-							<td class="text-center">
-								<span class="label label-success">Active</span>
-							</td>
-							<td>
-								<a href="#">marlon@brando.com</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Ryan Gossling</a>
-								<span class="user-subhead">Registered</span>
-							</td>
-							<td>
-								2013/03/03
-							</td>
-							<td class="text-center">
-								<span class="label label-danger">Banned</span>
-							</td>
-							<td>
-								<a href="#">jack@nicholson</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Emma Watson</a>
-								<span class="user-subhead">Registered</span>
-							</td>
-							<td>
-								2004/01/24
-							</td>
-							<td class="text-center">
-								<span class="label label-warning">Pending</span>
-							</td>
-							<td>
-								<a href="#">humphrey@bogart.com</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
-								<a href="#" class="user-link">Robert Downey Jr.</a>
-								<span class="user-subhead">Admin</span>
-							</td>
-							<td>
-								2013/12/31
-							</td>
-							<td class="text-center">
-								<span class="label label-success">Active</span>
-							</td>
-							<td>
-								<a href="#">spencer@tracy</a>
-							</td>
-							<td style="width: 20%;">
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link">
-									<span class="fa-stack">
-										<i class="fa fa-square fa-stack-2x"></i>
-										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-								<a href="#" class="table-link danger">
+								<a href="javascript:void(0)" (click)="deleteStudent(student)" class="table-link danger">
 									<span class="fa-stack">
 										<i class="fa fa-square fa-stack-2x"></i>
 										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
@@ -378,15 +72,6 @@
 					</tbody>
 				</table>
 			</div>
-			<ul class="pagination pull-right">
-				<li><a href="#"><i class="fa fa-chevron-left"></i></a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">4</a></li>
-				<li><a href="#">5</a></li>
-				<li><a href="#"><i class="fa fa-chevron-right"></i></a></li>
-			</ul>
 		</div>
 	</div>
 </div>
