--- a/client/src/app/teacher-list/teacher-list.component.html
+++ b/client/src/app/teacher-list/teacher-list.component.html
@@ -1,1 +1,80 @@
-<p>teacher-list works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+        <img
+        src="./../../assets/logo.svg"
+        class="me-2"
+        height="20"
+        alt=""
+        loading="lazy"
+        />
+        <h3>Trang quản trị của Admin</h3>
+    </a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" (click)="logOut()" href="#">Đăng xuất</a>
+        </li>
+      </ul>
+    </div>
+</nav>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12">
+		<div class="main-box clearfix">
+			<div class="table-responsive">
+				<table class="table user-list">
+					<thead>
+						<tr>
+							<th><span>Tên giáo viên</span></th>
+							<th><span>Ngày sinh</span></th>
+							<th class="text-center"><span>Số điện thoại</span></th>
+							<th><span>Email</span></th>
+							<th>&nbsp;</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr *ngFor="let teacher of teachers">
+							<td>
+								<a href="javascript:void(0)" class="user-link">{{teacher.fullName}}</a>
+								<span class="user-subhead">{{teacher.accountUsername}}</span>
+							</td>
+							<td>
+								{{formatDate(teacher.dateOfBirth)}}
+							</td>
+							<td class="text-center">
+								<span class="label label-default">{{teacher.phoneNumber}}</span>
+							</td>
+							<td>
+								<a href="javascript:void(0)">{{teacher.email}}</a>
+							</td>
+							<td style="width: 20%;">
+								<a href="javascript:void(0)" class="table-link">
+									<span class="fa-stack">
+										<i class="fa fa-square fa-stack-2x"></i>
+										<i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+								<a href="javascript:void(0)" class="table-link">
+									<span class="fa-stack">
+										<i class="fa fa-square fa-stack-2x"></i>
+										<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+								<a href="javascript:void(0)" (click)="deleteTeacher(teacher)" class="table-link danger">
+									<span class="fa-stack">
+										<i class="fa fa-square fa-stack-2x"></i>
+										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+
+<app-footer></app-footer>
