Add routing from admin page to lists page

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -75,7 +75,7 @@
                             <button type="submit" (click)="createManyStudent()" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
                         </div>
                         <div>
-                            <button type="submit" class="btn btn-secondary">Xem danh sách sinh viên</button>
+                            <button type="submit" (click)="openStudentsList()" class="btn btn-secondary">Xem danh sách sinh viên</button>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             <button type="submit" (click)="createManyTeacher()" class="btn btn-primary">Tạo tài khoản hàng loạt</button>
                         </div>
                         <div>
-                            <button type="submit" class="btn btn-secondary">Xem danh sách giáo viên</button>
+                            <button type="submit" (click)="openTeachersList()" class="btn btn-secondary">Xem danh sách giáo viên</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             <button type="submit" (click)="createClass()" class="btn btn-primary">Tạo lớp học</button>
                         </div>
                         <div>
-                            <button type="submit" class="btn btn-secondary">Xem danh sách các lớp học</button>
+                            <button type="submit" (click)="openClassesList()" class="btn btn-secondary">Xem danh sách các lớp học</button>
                         </div>
                     </div>
                 </div>
